--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "@stripe/stripe-js": "^4.3.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.0",
+    "googleapis": "^140.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "^16.7.0"
+    "stripe": "^16.7.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "eslint": "^8",
