--- a/package.json
+++ b/package.json
@@ -1,31 +1,57 @@
 {
-  "name": "flashcard-saas",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^5.3.1",
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@stripe/stripe-js": "^4.3.0",
-    "dotenv": "^16.4.5",
-    "firebase": "^10.13.0",
-    "googleapis": "^140.0.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "stripe": "^16.7.0",
-    "swr": "^2.2.5"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
-  }
+	"name": "flashcard-saas",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^5.3.1",
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
+		"@mui/icons-material": "^5.16.7",
+		"@mui/material": "^5.16.7",
+		"@stripe/stripe-js": "^4.3.0",
+		"dotenv": "^16.4.5",
+		"firebase": "^10.13.0",
+		"googleapis": "^140.0.1",
+		"next": "14.2.5",
+		"react": "^18",
+		"react-dom": "^18",
+		"stripe": "^16.7.0",
+		"swr": "^2.2.5"
+	},
+	"devDependencies": {
+		"@babel/preset-react": "^7.24.7",
+		"@testing-library/jest-dom": "^6.4.8",
+		"@testing-library/react": "^16.0.0",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.5",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0"
+	},
+	"jest": {
+		"transform": {
+			"^.+\\.[jt]sx?$": "babel-jest"
+		},
+		"moduleFileExtensions": [
+			"js",
+			"jsx",
+			"ts",
+			"tsx"
+		],
+		"testEnvironment": "jsdom"
+	},
+	"babel": {
+		"presets": [
+			"next/babel"
+		],
+		"plugins": [
+			"@babel/plugin-syntax-import-attributes"
+		]
+	}
 }
