--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "flashcard-saas",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -13,6 +14,7 @@
 		"@clerk/nextjs": "^5.3.1",
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
+		"@google/generative-ai": "^0.17.0",
 		"@mui/icons-material": "^5.16.7",
 		"@mui/material": "^5.16.7",
 		"@stripe/stripe-js": "^4.3.0",
